// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`e2e:make > cjs > should create bundle in cjs format 1`] = `
[
  {
    "cwd": "\${process.cwd()}/__fixtures__/pkg/my-atoi",
    "errors": [],
    "mangleCache": undefined,
    "outdir": "dist",
    "outputs": [
      {
        "entryPoint": "src/index.cts",
        "outfile": "dist/index.cjs",
        "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/index.cjs",
      },
    ],
    "warnings": [],
  },
]
`;

exports[`e2e:make > cjs > should create bundleless build in cjs format 1`] = `
[
  {
    "cwd": "\${process.cwd()}/__fixtures__/pkg/my-atoi",
    "errors": [],
    "mangleCache": undefined,
    "outdir": "dist",
    "outputs": [
      {
        "entryPoint": "src/index.cts",
        "outfile": "dist/index.cjs",
        "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/index.cjs",
      },
      {
        "entryPoint": "src/max-value.ts",
        "outfile": "dist/max-value.cjs",
        "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/max-value.cjs",
      },
      {
        "entryPoint": "src/min-value.ts",
        "outfile": "dist/min-value.cjs",
        "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/min-value.cjs",
      },
      {
        "entryPoint": "src/my-atoi.cts",
        "outfile": "dist/my-atoi.cjs",
        "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/my-atoi.cjs",
      },
    ],
    "warnings": [],
  },
]
`;

exports[`e2e:make > esm > should create bundle in esm format 1`] = `
[
  {
    "cwd": "\${process.cwd()}/__fixtures__/pkg/dbl-linear",
    "errors": [],
    "mangleCache": undefined,
    "outdir": "dist",
    "outputs": [
      {
        "entryPoint": "dbl-linear.ts",
        "outfile": "dist/index.mjs",
        "path": "\${process.cwd()}/__fixtures__/pkg/dbl-linear/dist/index.mjs",
      },
    ],
    "warnings": [],
  },
]
`;

exports[`e2e:make > esm > should create bundleless build in esm format 1`] = `
[
  {
    "cwd": "\${process.cwd()}/__fixtures__/pkg/dbl-linear",
    "errors": [],
    "mangleCache": undefined,
    "outdir": "dist",
    "outputs": [
      {
        "entryPoint": "dbl-linear.ts",
        "outfile": "dist/dbl-linear.mjs",
        "path": "\${process.cwd()}/__fixtures__/pkg/dbl-linear/dist/dbl-linear.mjs",
      },
    ],
    "warnings": [],
  },
]
`;

exports[`e2e:make > iife > should create bundle in iife format 1`] = `
[
  {
    "cwd": "\${process.cwd()}/__fixtures__/pkg/tribonacci",
    "errors": [],
    "mangleCache": undefined,
    "outdir": "dist",
    "outputs": [
      {
        "entryPoint": "src/tribonacci.ts",
        "outfile": "dist/index.js",
        "path": "\${process.cwd()}/__fixtures__/pkg/tribonacci/dist/index.js",
      },
    ],
    "warnings": [],
  },
]
`;

exports[`e2e:make > iife > should create bundleless build in iife format 1`] = `
[
  {
    "cwd": "\${process.cwd()}/__fixtures__/pkg/tribonacci",
    "errors": [],
    "mangleCache": undefined,
    "outdir": "dist",
    "outputs": [
      {
        "entryPoint": "src/tribonacci.ts",
        "outfile": "dist/tribonacci.js",
        "path": "\${process.cwd()}/__fixtures__/pkg/tribonacci/dist/tribonacci.js",
      },
    ],
    "warnings": [],
  },
]
`;

exports[`e2e:make > should copy files to output directory 1`] = `
[
  {
    "cwd": "\${process.cwd()}/__fixtures__/pkg/sum-of-intervals",
    "errors": [],
    "mangleCache": undefined,
    "outdir": "dist",
    "outputs": [
      {
        "entryPoint": "sum-of-intervals.cjs",
        "outfile": "dist/sum-of-intervals.cjs",
        "path": "\${process.cwd()}/__fixtures__/pkg/sum-of-intervals/dist/sum-of-intervals.cjs",
      },
      {
        "entryPoint": "sum-of-intervals.d.ts",
        "outfile": "dist/sum-of-intervals.d.ts",
        "path": "\${process.cwd()}/__fixtures__/pkg/sum-of-intervals/dist/sum-of-intervals.d.ts",
      },
      {
        "entryPoint": "sum-of-intervals.mjs",
        "outfile": "dist/sum-of-intervals.mjs",
        "path": "\${process.cwd()}/__fixtures__/pkg/sum-of-intervals/dist/sum-of-intervals.mjs",
      },
    ],
    "warnings": [],
  },
]
`;
